@@ -65,8 +65,8 @@
 	  <ul>
 	    <li>
 <a class="title" href="user/lilypond/index.html">User manual</a>
-(in <a class="title" href="user/lilypond.pdf">PDF</a>, in
-<a class="title" href="user/lilypond.html">one big page</a> ~ 4 Mb)
+(in <a class="title" href="user/lilypond.html">one big page</a> ~ 4 Mb,
+in <a class="title" href="user/lilypond.pdf">PDF</a>)
 
      <br>(everything about LilyPond)
      
@@ -79,8 +79,8 @@
 
      <br>(for advanced users)
  <li><a class="title" href="user/music-glossary/index.html">Glossary</a>
-(in <a class="title" href="user/music-glossary.pdf">PDF</a>, in
-<a class="title" href="user/music-glossary.html">one big page</a> ~ 1 Mb)
+(in <a class="title" href="user/music-glossary.html">one big page</a> ~ 1 Mb,
+in <a class="title" href="user/music-glossary.pdf">PDF</a>)
 
      <br>(for non-English users)
 	  </ul>
