@@ -1,3 +1,7 @@
+2006-02-17  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* Documentation/index.html.in: order links: html before PDF.
+
 2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/tie-column-format.cc (Module): remove.
